--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
         <div class="products">
             <div class="box">
-                <img src='F:\htmlcss\perfumy\box1_imresizer.jpg' >
+                <img src='box1_imresizer.jpg' >
                 <p>Perfume is a fragrant liquid made from natural or synthetic aromatic ingredients that give a pleasant smell. It helps people feel fresh, confident, and attractive throughout the day. Perfume
                      is commonly used as part of daily grooming and personal care.</p>
             </div>
             <div class="box">
-                <img src='F:\htmlcss\perfumy\box2_imresizer.jpg'> 
+                <img src='box2_imresizer.jpg'> 
                 <p>Different perfumes have different scent types such as floral, woody, fruity, spicy, and fresh. Each fragrance creates a unique mood and impression. Choosing the right 
                     perfume depends on personal taste, occasion, and season.</p>
             </div>
             <div class="box">
-                <img src='F:\htmlcss\perfumy\box3_imresizer.jpg'>
+                <img src='box3_imresizer.jpg'>
                 <p>Perfume also reflects personality and style. A good-quality perfume lasts longer and leaves a memorable impression. Today, perfumes are available in many varieties for men and women,
                      making them an important part of modern lifestyle and fashion.</p>
             </div>
@@ -66,5 +66,6 @@
 
 
     </body>
+
 
 </html>
