--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <title>perfumy</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
 
 
@@ -69,3 +71,4 @@
 
 
 </html>
+
